--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "sssss",
+  "author": "dksksksk",
   "license": "ISCssss",
   "devDependencies": {
     "babel-core": "^6.7.4",
